<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/companyEdit"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/company_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/postalEdit"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/postal_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/companyEdit"
        app:layout_constraintTop_toBottomOf="@+id/companyEdit" />

    <EditText
        android:id="@+id/addressEdit"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="textPersonName|textPostalAddress"
        app:layout_constraintStart_toStartOf="@+id/postalEdit"
        app:layout_constraintTop_toBottomOf="@+id/postalEdit" />

    <EditText
        android:id="@+id/telEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/tel_hint"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/addressEdit"
        app:layout_constraintTop_toBottomOf="@+id/addressEdit" />

    <EditText
        android:id="@+id/faxEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fax_hint"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/telEdit"
        app:layout_constraintTop_toBottomOf="@+id/telEdit" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save_text"
        app:layout_constraintStart_toStartOf="@+id/faxEdit"
        app:layout_constraintTop_toBottomOf="@+id/faxEdit" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/cancel_text"
        app:layout_constraintStart_toEndOf="@+id/saveBtn"
        app:layout_constraintTop_toTopOf="@+id/saveBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>